# based_DB

./: .gitignore  Cargo.toml  README.md  commands.txt
_data/xd/: col2.bson  colecion.bson  users.bson
data/: orchestrator.bson
examples/: connect.rs
src/: bson_module.rs  bson_module_save.rs  collection.rs  command_handler.rs  database.rs  handlers.rs  lib.rs  main.rs  orchestrator.rs  orchestrator_handler.rs
src/handlers/: aux_fn.rs  command_handler.rs  create.rs  delete.rs  find.rs  insert.rs  peek.rs  register.rs  update.rs
src/orchestrator/: database.rs  orchestrator.rs  user.rs
