[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
tokio-util = {version = "0.7.9", features= ["full"] }
futures = "0.3.28"
bytes = "1.5.0"
bson = "2.7.0"
serde_json = "1.0.107"
serde = "1.0"